--- a/requirements.txt
+++ b/requirements.txt
@@ -18,22 +18,28 @@ Babel==2.13.0
 backoff==1.10.0
 blinker==1.6.3
 cachelib==0.9.0
+cachetools==5.5.0
 cattrs==23.1.2
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.0
 click==8.1.7
 clickclick==20.10.2
+cloudpickle==3.1.0
 colorama==0.4.6
 colorlog==4.8.0
 ConfigUpdater==3.1.1
 connexion==2.14.2
+contourpy==1.3.1
 cron-descriptor==1.4.0
 croniter==1.4.1
 cryptography==41.0.4
+cycler==0.12.1
+databricks-sdk==0.37.0
 Deprecated==1.2.14
 dill==0.3.1.1
 dnspython==2.4.2
+docker==7.1.0
 docutils==0.20.1
 email-validator==1.3.1
 exceptiongroup==1.1.3
@@ -47,9 +53,16 @@ Flask-Login==0.6.2
 Flask-Session==0.5.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.2.1
+fonttools==4.55.0
 frozenlist==1.4.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.36.0
 google-re2==1.1
 googleapis-common-protos==1.60.0
+graphene==3.4.3
+graphql-core==3.2.5
+graphql-relay==3.2.0
 graphviz==0.20.1
 greenlet==3.0.0
 grpcio==1.59.0
@@ -66,6 +79,7 @@ Jinja2==3.1.2
 joblib==1.4.2
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
+kiwisolver==1.4.7
 lazy-object-proxy==1.9.0
 limits==3.6.0
 linkify-it-py==2.0.2
@@ -77,10 +91,14 @@ MarkupSafe==2.1.3
 marshmallow==3.20.1
 marshmallow-oneofschema==3.0.1
 marshmallow-sqlalchemy==0.26.1
+matplotlib==3.9.2
 mdit-py-plugins==0.4.0
 mdurl==0.1.2
+mlflow==2.17.2
+mlflow-skinny==2.17.2
 multidict==6.0.4
 numpy==2.1.2
+nvidia-nccl-cu12==2.23.4
 opentelemetry-api==1.20.0
 opentelemetry-exporter-otlp==1.20.0
 opentelemetry-exporter-otlp-proto-common==1.20.0
@@ -94,16 +112,20 @@ packaging==23.2
 pandas==2.2.3
 pathspec==0.11.2
 pendulum==2.1.2
+pillow==11.0.0
 pluggy==1.3.0
 prison==0.2.1
 protobuf==4.21.12
 psutil==5.9.5
-pyarrow==18.0.0
+pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.21
 pydantic==2.4.2
 pydantic_core==2.10.1
 Pygments==2.16.1
 PyJWT==2.8.0
+pyparsing==3.2.0
 python-daemon==3.0.1
 python-dateutil==2.8.2
 python-nvd3==0.15.0
@@ -119,10 +141,12 @@ rfc3986==1.5.0
 rich==13.6.0
 rich-argparse==1.3.0
 rpds-py==0.10.4
+rsa==4.9
 scikit-learn==1.5.2
 scipy==1.14.1
 setproctitle==1.3.3
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.0
 SQLAlchemy==1.4.49
 SQLAlchemy-JSONField==1.0.1.post0
@@ -141,5 +165,6 @@ urllib3==1.26.17
 Werkzeug==2.2.3
 wrapt==1.15.0
 WTForms==3.0.1
+xgboost==2.1.2
 yarl==1.9.2
 zipp==3.17.0
