--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ docker==7.1.0
 docutils==0.20.1
 email-validator==1.3.1
 exceptiongroup==1.1.3
+fairlearn
 Flask==2.2.5
 Flask-AppBuilder==4.3.6
 Flask-Babel==2.0.0
