--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.8.6
 aiohttp-retry==2.9.1
 aiosignal==1.3.1
 alembic==1.12.0
+altair==4.2.2
 amqp==5.3.1
 annotated-types==0.6.0
 antlr4-python3-runtime==4.9.3
@@ -96,6 +97,7 @@ graphene==3.4.3
 graphql-core==3.2.5
 graphql-relay==3.2.0
 graphviz==0.20.1
+great-expectations==1.2.4
 greenlet==3.0.0
 grpcio==1.59.0
 gto==1.7.1
@@ -130,11 +132,13 @@ marshmallow-sqlalchemy==0.26.1
 matplotlib==3.9.2
 mdit-py-plugins==0.4.0
 mdurl==0.1.2
+mistune==3.0.2
 mlflow==2.17.2
 mlflow-skinny==2.17.2
+monotonic==1.6
 multidict==6.0.4
 networkx==3.4.2
-numpy==2.1.2
+numpy==1.26.4
 nvidia-nccl-cu12==2.23.4
 omegaconf==2.3.0
 opentelemetry-api==1.20.0
@@ -148,12 +152,13 @@ opentelemetry-semantic-conventions==0.41b0
 ordered-set==4.1.0
 orjson==3.10.12
 packaging==23.2
-pandas==2.2.3
+pandas==2.1.4
 pathspec==0.11.2
 pendulum==2.1.2
 pillow==11.0.0
 platformdirs==4.3.6
 pluggy==1.3.0
+posthog==2.5.0
 prison==0.2.1
 prompt_toolkit==3.0.48
 protobuf==4.21.12
@@ -210,10 +215,12 @@ termcolor==2.3.0
 text-unidecode==1.3
 threadpoolctl==3.5.0
 tomlkit==0.13.2
+toolz==1.0.0
 tqdm==4.67.1
 typer==0.14.0
 typing_extensions==4.8.0
 tzdata==2024.2
+tzlocal==5.2
 uc-micro-py==1.0.2
 unicodecsv==0.14.1
 urllib3==1.26.17
