--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -101,7 +101,11 @@ jobs:
 
       - name: Wait for Airflow to Start
         run: sleep 30  # Allow time for Airflow to initialize (adjust if needed)
-      
+      - name: Set permissions for Airflow log directories
+        run: |
+              mkdir -p /opt/airflow/logs/scheduler/$(date +%Y-%m-%d)
+              sudo chown -R airflow:airflow /opt/airflow/logs
+
       - name: Check if container is running
         run: |
           docker ps -a
