--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,4 +30,5 @@ services:
       retries: 5
       start_period: 10s
       timeout: 5s
-    entrypoint: ["/bin/bash", "/opt/airflow/entrypoint.sh"]
+    entrypoint: ["/bin/bash", "-c", "chmod -R 777 /opt/airflow/logs && /opt/airflow/entrypoint.sh"]
+    
