--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,6 +91,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
+      - name: Create Logs Directory
+        run: mkdir -p ./logs
+
       - name: Set Permissions for Logs Directory
         run: chmod -R 777 ./logs
 
