--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,6 +108,28 @@ jobs:
       - name: Wait for Airflow to Start
         run: sleep 60  # Allow time for Airflow to initialize (adjust if needed)
       
+      - name: Wait for Airflow to Start and Become Healthy
+        run: |
+          MAX_RETRIES=10
+          RETRY_COUNT=0
+          while [ $RETRY_COUNT -lt $MAX_RETRIES ]; do
+            STATUS=$(docker inspect --format='{{.State.Health.Status}}' airflow)
+            if [ "$STATUS" = "healthy" ]; then
+              echo "Airflow is healthy!"
+              break
+            else
+              echo "Waiting for Airflow to become healthy... (Status: $STATUS)"
+              RETRY_COUNT=$((RETRY_COUNT + 1))
+              sleep 10
+            fi
+          done
+
+          if [ "$STATUS" != "healthy" ]; then
+            echo "Airflow did not become healthy. Exiting."
+            docker logs airflow
+            exit 1
+          fi
+
       
       - name: Fix Permissions for Logs Directory
         run: docker exec airflow chmod -R 777 /opt/airflow/logs
