--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -180,17 +180,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: Set up Docker Buildx (for building multi-stage Docker images)
-      - name: Set up Docker Buildx
+      # Step 2: Set up Docker
+      - name: Set up Docker
         uses: docker/setup-buildx-action@v2
 
-      # Step 3: Build and run Docker Compose
+      # Step 3: Install Docker Compose
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
+      # Step 4: Build and start Airflow using Docker Compose
       - name: Build and Start Airflow
         run: |
           docker-compose down || true
           docker-compose up -d --build
 
-      # Step 4: Wait for the Airflow webserver to be ready
+      # Step 5: Wait for the Airflow webserver to be ready
       - name: Wait for Airflow Webserver
         run: |
           echo "Waiting for Airflow webserver to be ready..."
@@ -204,12 +210,12 @@ jobs:
           echo "Airflow webserver did not become healthy in time."
           exit 1
 
-      # Step 5: Trigger the data_pipeline.py DAG
+      # Step 6: Trigger the data_pipeline.py DAG
       - name: Trigger data_pipeline.py DAG
         run: |
           docker exec -it airflow airflow dags trigger -d data_pipeline
 
-      # Step 6: Verify the DAG run status
+      # Step 7: Verify the DAG run status
       - name: Verify DAG Run
         run: |
           echo "Waiting for DAG run to complete..."
