--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -132,7 +132,7 @@ jobs:
       - name: Wait for Airflow Webserver
         run: |
           echo "Waiting for Airflow webserver to be ready..."
-          for i in {1..10}; do
+          for i in {1..20}; do
             if curl -s http://localhost:8080/health | grep -q '"status":"healthy"'; then
               echo "Airflow webserver is healthy!"
               exit 0
@@ -141,9 +141,9 @@ jobs:
           done
           echo "Airflow webserver did not become healthy in time."
           exit 1
-          
+
       - name: Print Airflow Logs
-          if: failure()
+          if: ${{ failure() }}
           run: docker logs airflow
 
       # Step 6: Trigger the data_pipeline.py DAG
