--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,14 +16,14 @@ services:
       - EMAIL_PASSWORD=lhwnkkhmvptmjghx
     volumes:
       - ./dags:/opt/airflow/dags   # Mount DAGs for easy updating
-      # - ./logs:/opt/airflow/logs   # Optional: log persistence
-      # - ./raw_data:/opt/airflow/raw_data       # Mount 'raw_data' folder
-      # - ./motor_assessments:/opt/airflow/motor_assessments  # Mount 'motor_assessments' folder
-      # - ./outputs:/opt/airflow/outputs # Mount 'output' folder
-      # - ./models:/opt/airflow/models
-      # - ./mlruns:/opt/airflow/mlruns # Mount mlruns folder for MLflow tracking
-      # - ./.dvc:/opt/airflow/.dvc          # Mount DVC metadata folder
-      # - ./.git:/opt/airflow/.git 
+      - ./logs:/opt/airflow/logs   # Optional: log persistence
+      - ./raw_data:/opt/airflow/raw_data       # Mount 'raw_data' folder
+      - ./motor_assessments:/opt/airflow/motor_assessments  # Mount 'motor_assessments' folder
+      - ./outputs:/opt/airflow/outputs # Mount 'output' folder
+      - ./models:/opt/airflow/models
+      - ./mlruns:/opt/airflow/mlruns # Mount mlruns folder for MLflow tracking
+      - ./.dvc:/opt/airflow/.dvc          # Mount DVC metadata folder
+      - ./.git:/opt/airflow/.git 
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080"]
       interval: 30s
