--- a/requirements.txt
+++ b/requirements.txt
@@ -90,6 +90,8 @@ funcy==2.0
 gitdb==4.0.11
 GitPython==3.1.43
 google-auth==2.36.0
+google-cloud-storage
+google-cloud-aiplatform
 google-re2==1.1
 googleapis-common-protos==1.60.0
 grandalf==0.8
