--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,97 +1,4 @@
-
-# name: Trigger Airflow DAG on Push
-
-# on:
-#   push:
-#     paths:
-#       - "dags/**"  # Trigger only when changes are made to the `dags` folder
-#     branches:
-#       - main
-
-# jobs:
-#   trigger-dag:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout Code
-#         uses: actions/checkout@v2
-
-#       - name: Set up Docker
-#         uses: docker/setup-buildx-action@v2
-
-#       - name: Install Docker Compose
-#         run: |
-#           sudo apt-get update
-#           sudo apt-get install -y docker-compose
-
-#       - name: Create Logs Directory
-#         run: mkdir -p ./logs
-
-#       - name: Set Permissions for Logs Directory
-#         run: chmod -R 777 ./logs
-
-#       - name: Start Airflow
-#         run: |
-#           docker-compose down || true  # Stop any existing Airflow containers
-#           docker-compose up -d --build
-
-#       - name: List Running Containers
-#         run: docker ps -a 
-
-#       - name: Wait for Airflow to Start
-#         run: sleep 60  # Allow time for Airflow to initialize (adjust if needed)
-#       - name: Initialize Airflow Database
-#         run: docker exec airflow airflow db init
-
-#       - name: Wait for Airflow to Start and Become Healthy
-#         run: |
-#           MAX_RETRIES=10
-#           RETRY_COUNT=0
-#           while [ $RETRY_COUNT -lt $MAX_RETRIES ]; do
-#             STATUS=$(docker inspect --format='{{.State.Health.Status}}' airflow)
-#             if [ "$STATUS" = "healthy" ]; then
-#               echo "Airflow is healthy!"
-#               break
-#             else
-#               echo "Waiting for Airflow to become healthy... (Status: $STATUS)"
-#               RETRY_COUNT=$((RETRY_COUNT + 1))
-#               sleep 10
-#             fi
-#           done
-
-#           if [ "$STATUS" != "healthy" ]; then
-#             echo "Airflow did not become healthy. Exiting."
-#             docker logs airflow
-#             exit 1
-#           fi
-
-      
-#       - name: Fix Permissions for Logs Directory
-#         run: docker exec airflow chmod -R 777 /opt/airflow/logs
-
-#       - name: Check Airflow Logs Directory Ownership
-#         run: docker exec airflow ls -ld /opt/airflow/logs
-
-
-#       - name: Check if container is running
-#         run: |
-#           docker ps -a
-#           docker exec airflow airflow version
-      
-#       - name: Trigger data_pipeline DAG
-#         run: |
-#           docker exec airflow airflow dags trigger data_pipeline
-      
-#       - name: Check Airflow Logs
-#         run: docker logs airflow
-
-#       - name: Debug Airflow Container
-#         run: |
-#           docker exec airflow ls -ld /opt/airflow/logs
-#           docker exec airflow airflow db check
-#           docker exec airflow airflow dags list
-
-#       - name: Show DAG Status
-#         run: docker exec airflow airflow dags list-runs -d data_pipeline
+dags list-runs -d data_pipeline
 name: Deploy and Trigger Airflow DAG
 
 on:
@@ -117,6 +24,11 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
 
+      - name: Set Docker socket permissions
+        run: |
+          sudo chmod 666 /var/run/docker.sock  # Change permissions to allow access
+          ls -l /var/run/docker.sock  # Optional: Check permissions after changing
+      
       # Step 3: Install Docker Compose
       - name: Install Docker Compose
         run: |
@@ -129,29 +41,35 @@ jobs:
           docker-compose down || true
           docker-compose up -d --build
 
-  
+      - name: Mount Docker socket and start Airflow container
+        run: |
+          docker run -d \
+            -v /var/run/docker.sock:/var/run/docker.sock \
+            --name airflow-container \
+            airflow
+            
+      - name: Debug: List Running Containers
+        run: |
+          echo "Listing running containers for debugging:"
+          docker ps -a
+        shell: bash
+
+      - name: Set Permissions for Writable Folders
+        run: |
+          echo "Setting permissions for writable folders..."
+          chmod -R 777 logs mlruns models outputs
+        shell: bash
 
       # Step 6: Trigger the data_pipeline.py DAG
       - name: Trigger data_pipeline.py DAG
         run: |
-          docker exec airflow airflow dags trigger data_pipeline
+          docker exec airflow-container airflow dags trigger data_pipeline
 
-      - name: Print Airflow Logs
-        if: ${{ failure() }}
-        run: docker logs airflow
-
-      # Step 7: Verify the DAG run status.
-      - name: Verify DAG Run
+      
+      - name: Debug: Airflow Logs
         run: |
-          echo "Waiting for DAG run to complete..."
-          docker exec -it airflow bash -c "
-            for i in {1..10}; do
-              if airflow dags state data_pipeline | grep -q 'success'; then
-                echo 'DAG run completed successfully!'
-                exit 0
-              fi
-              sleep 30
-            done
-            echo 'DAG run did not complete successfully in time.'
-            exit 1
-          "
+          echo "Fetching Airflow webserver logs for debugging:"
+          docker logs airflow-container || true
+        shell: bash
+
+      
