--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,14 @@ services:
       - MLFLOW_TRACKING_URI=file:/opt/airflow/mlruns  # Set tracking URI to a local directory
       - EMAIL=mrudulaacharya18@gmail.com
       - EMAIL_PASSWORD=lhwnkkhmvptmjghx
-      - GOOGLE_APPLICATION_CREDENTIALS=/opt/airflow/iam-sa-key.json
+      - GOOGLE_APPLICATION_CREDENTIALS=/opt/airflow/sa-key.json
+      - GCP_PROJECT_ID=driven-lore-443500-t9
+      - GCP_REGION=us-central1
+      - DOCKER_IMAGE_NAME=model-predict-api
+      - GKE_CLUSTER_NAME=model-cluster
+      - GCP_ZONE=us-central1-c
+      - GKE_DEPLOYMENT_NAME=parkinson-model
+      - GCP_ARTIFACT_REPO=model-registry-1
     volumes:
       - ./dags:/opt/airflow/dags   # Mount DAGs for easy updating
       - ./logs:/opt/airflow/logs   # Optional: log persistence
@@ -25,7 +32,10 @@ services:
       - ./mlruns:/opt/airflow/mlruns # Mount mlruns folder for MLflow tracking
       - ./.dvc:/opt/airflow/.dvc          # Mount DVC metadata folder
       - ./.git:/opt/airflow/.git 
-      - ./iam-sa-key.json:/opt/airflow/iam-sa-key.json
+      - ./sa-key.json:/opt/airflow/sa-key.json
+      - ./gcp_image:/opt/airflow/gcp_image
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /Users/shalakapadalkar/.docker/config.json:/root/.docker/config.json
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080"]
       interval: 30s
