--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,18 +20,19 @@ services:
       - CLOUD_RUN_SERVICE_NAME=model-predict-api
       - DOCKER_IMAGE_NAME=gcr.io/driven-lore-443500-t9/model-predict-api
     volumes:
-      - ./dags:/opt/airflow/dags   # Mount DAGs for easy updating
-      - ./logs:/opt/airflow/logs   # Optional: log persistence
-      - ./raw_data1:/opt/airflow/raw_data1       # Mount 'raw_data' folder
-      - ./motor_assessment:/opt/airflow/motor_assessment  # Mount 'motor_assessments' folder
-      - ./outputs:/opt/airflow/outputs # Mount 'output' folder
-      - ./models:/opt/airflow/models
-      - ./mlruns:/opt/airflow/mlruns # Mount mlruns folder for MLflow tracking
+      # - ./dags:/opt/airflow/dags   # Mount DAGs for easy updating
+      # - ./logs:/opt/airflow/logs   # Optional: log persistence
+      # - ./raw_data1:/opt/airflow/raw_data1       # Mount 'raw_data' folder
+      # - ./motor_assessment:/opt/airflow/motor_assessment  # Mount 'motor_assessments' folder
+      # - ./outputs:/opt/airflow/outputs # Mount 'output' folder
+      # - ./models:/opt/airflow/models
+      # - ./mlruns:/opt/airflow/mlruns # Mount mlruns folder for MLflow tracking
       - ./.dvc:/opt/airflow/.dvc          # Mount DVC metadata folder
       - ./.git:/opt/airflow/.git 
-      - ./iam-sa-key.json:/opt/airflow/iam-sa-key.json
+      - ./sa-key.json:/opt/airflow/iam-sa-key.json
       # New Volume for Cloud Run Deployment Scripts
       - ./cloud_run:/opt/airflow/cloud_run
+      
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080"]
       interval: 30s
