--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,16 +17,17 @@ services:
       - GOOGLE_APPLICATION_CREDENTIALS=/opt/airflow/sa-key.json
       - GCP_PROJECT_ID=driven-lore-443500-t9
       - GCP_REGION=us-central1
-      - DOCKER_IMAGE_NAME=model-predict-api
+      - DOCKER_IMAGE_NAME=model-predict
       - GKE_CLUSTER_NAME=model-cluster
       - GCP_ZONE=us-central1-c
       - GKE_DEPLOYMENT_NAME=parkinson-model
-      - GCP_ARTIFACT_REPO=model-registry-1
+      - GCP_ARTIFACT_REPO=model-registry-2
+      - DEPLOYMENT_FILE=/opt/airflow/deployment.yaml
     volumes:
       - ./dags:/opt/airflow/dags   # Mount DAGs for easy updating
       - ./logs:/opt/airflow/logs   # Optional: log persistence
-      - ./raw_data1:/opt/airflow/raw_data1       # Mount 'raw_data' folder
-      - ./motor_assessment:/opt/airflow/motor_assessment  # Mount 'motor_assessments' folder
+      - ./raw_data:/opt/airflow/raw_data       # Mount 'raw_data' folder
+      - ./motor_assessments:/opt/airflow/motor_assessments  # Mount 'motor_assessments' folder
       - ./outputs:/opt/airflow/outputs # Mount 'output' folder
       - ./models:/opt/airflow/models
       - ./mlruns:/opt/airflow/mlruns # Mount mlruns folder for MLflow tracking
@@ -36,6 +37,7 @@ services:
       - ./gcp_image:/opt/airflow/gcp_image
       - /var/run/docker.sock:/var/run/docker.sock
       - /Users/shalakapadalkar/.docker/config.json:/root/.docker/config.json
+      - ./deployment.yaml:/opt/airflow/deployment.yaml
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080"]
       interval: 30s
